Micronaut 5 compability (#1209)